create structure project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,11 @@
 <div class="wrapper">
    <div class="content">
       <app-header></app-header>
-      <!-- ! -->
-
-      <!-- ! -->
-      <app-slider> </app-slider>
-      <app-product></app-product>
+      <main>
+         <router-outlet></router-outlet>
+      </main>
    </div>
-
-   <footer class="footer">
+   <div class="footer">
       <app-footer></app-footer>
-   </footer>
+   </div>
 </div>
-
-<!-- <router-outlet></router-outlet> -->
