--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
       <div class="header__row">
          <div class="header__search">
             <h3 class="header__title">
-               <a href="#">
+               <a routerLink=''>
                   SHOP
                </a>
             </h3>
