--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,4 @@
-<p>login works!</p>
+<div class="login">
+   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, accusamus eius est aperiam cupiditate magnam quaerat
+   accusantium natus architecto similique.
+</div>
