--- a/src/app/components/header/header__components/nav-menu/nav-menu.component.scss
+++ b/src/app/components/header/header__components/nav-menu/nav-menu.component.scss
@@ -24,4 +24,11 @@
       padding-bottom: 4px;
       border-bottom: 1px solid white;
    }
+
+   .active {
+      color: white;
+      transition: 0.35s;
+      padding-bottom: 4px;
+      border-bottom: 1px solid white;
+   }
 }
