added product by id

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,11 @@
 <div class="product">
    <div class="container">
       <div class="product__title">Latest products</div>
-      <app-product-item></app-product-item>
+      <app-products-item></app-products-item>
+      <div class="product__btn">
+         <button>1</button>
+         <button>2</button>
+      </div>
+
    </div>
 </div>
