--- a/src/app/components/product-by-id-info/product-by-id-info.component.html
+++ b/src/app/components/product-by-id-info/product-by-id-info.component.html
@@ -34,7 +34,7 @@
                </form>
             </div>
             <div class="button">
-               <button>Add to card</button>
+               <button (click)=buyProduct(product)>Add to card</button>
             </div>
          </div>
       </div>
