--- a/src/app/components/header/header__components/nav-menu/nav-menu.component.html
+++ b/src/app/components/header/header__components/nav-menu/nav-menu.component.html
@@ -3,6 +3,7 @@
       <li class="nav__item">
          <a routerLink="cart" class="nav__link" routerLinkActive>
             <i class="fas fa-shopping-cart"></i>
+            {{count}}
             Cart
          </a>
       </li>
