--- a/src/app/components/product/product-by-id-information/product-by-id-information.component.html
+++ b/src/app/components/product/product-by-id-information/product-by-id-information.component.html
@@ -13,15 +13,15 @@
             </div>
          </div>
          <div class="main__card">
-            <div class="price">
+            <div class="main__prices">
                <span>Price:</span>
                <span>{{product.price}} $</span>
             </div>
-            <div class="status">
+            <div class="main__status">
                <span>Status:</span>
                <span>in stock</span>
             </div>
-            <div class="qty">
+            <div class="main__qty">
                <span>Qty:</span>
                <form>
                   <select>
@@ -33,7 +33,7 @@
                   </select>
                </form>
             </div>
-            <div class="button">
+            <div class="main__btn">
                <button (click)=buyProduct(product)>Add to card</button>
             </div>
          </div>
