start cart-item

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,5 +1,8 @@
 <div class="cart">
    <div class="container">
-
+      <h2 class="cadi__item-title">
+         Shopping cart
+      </h2>
+      <app-cart-item></app-cart-item>
    </div>
 </div>
