--- a/src/app/components/product/product-by-id-information/product-by-id-information.component.html
+++ b/src/app/components/product/product-by-id-information/product-by-id-information.component.html
@@ -1,5 +1,8 @@
 <div class="main">
    <div class="container">
+      <button class="main__back" routerLink=''>
+         Go back
+      </button>
       <div class="main__row">
          <div class="main__descr">
             <div class="main__image">
@@ -39,4 +42,7 @@
          </div>
       </div>
    </div>
+</div>
+<div class="container">
+   <app-cart-item></app-cart-item>
 </div>
