--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -3,8 +3,8 @@
       <div class="product__title">Latest products</div>
       <app-products-item></app-products-item>
       <div class="product__btn">
-         <button>1</button>
-         <button>2</button>
+         <button (click)='goToPage(1)'>1</button>
+         <button (click)='goToPage(2)'>2</button>
       </div>
 
    </div>
