--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -6,6 +6,16 @@
       margin: 0 auto;
    }
 
+   &__row {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+   }
+
+   &__item {
+      flex: 1 1 25%;
+   }
+
    &__title {
       font-size: 30px;
       color: rgb(48, 46, 46);
