--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -7,35 +7,25 @@
        margin: 0 auto;
    }
 
+   &__img {
+       display: block;
+       width: 25%;
+       border-radius: 100%;
+   }
+
+   &__name {
+    color: white;
+    margin: 30px 0 40px 0;
+    font-size: 24px;
+   }
+
    &__item{
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0 auto;
        width: 95%;
-       height: 400px;
+       padding: 30px 0;
        background-color: rgb(48, 46, 46);
-
- 
-       h2{
-        color: white;
-        margin: 30px 0 40px 0;
-        font-size: 24px;
-       }
-
-       div {
-        width: 200px;
-        height: 200px;
-       }
-
-       #one{
-           background-color: green;
-       }
-       #two{
-           background-color: red;
-       }
-       #three{
-           background-color: yellow;
-       }
    }
 }
