--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,6 +3,10 @@
       <h2 class="cadi__item-title">
          Shopping cart
       </h2>
-      <app-cart-item></app-cart-item>
+      <div class="cart__row">
+         <app-cart-item></app-cart-item>
+         <!-- <app-products-item *ngFor='let product of products' [product]='product' class="product__item"> -->
+         <!-- </app-products-item> -->
+      </div>
    </div>
 </div>
