--- a/src/app/components/product/product-by-id-information/product-by-id-information.component.html
+++ b/src/app/components/product/product-by-id-information/product-by-id-information.component.html
@@ -27,12 +27,9 @@
             <div class="main__qty">
                <span>Qty:</span>
                <form>
-                  <select>
-                     <option value="1">1</option>
-                     <option value="2">2</option>
-                     <option value="3">3</option>
-                     <option value="4">4</option>
-                     <option value="5">5</option>
+                  <select [(ngModel)]='countByProduct' class="main__select">
+                     <option [value]='i+1' *ngFor='let value of counts(product.countInStock); let i = index; '>{{i+1}}
+                     </option>
                   </select>
                </form>
             </div>
@@ -46,3 +43,4 @@
 <div class="container">
    <app-cart-item></app-cart-item>
 </div>
+<!-- [attr.disabled]='product.countInStock === 0 ? true, null' -->
