--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -8,12 +8,13 @@
 
    &__row {
       display: flex;
-      justify-content: space-between;
       flex-wrap: wrap;
    }
 
    &__item {
-      flex: 1 1 25%;
+      flex: 0 1 23%;
+      margin: 0 5px;
+      padding: 0 5px;
    }
 
    &__title {
