--- a/src/app/components/product/product-by-id-information/product-by-id-information.component.html
+++ b/src/app/components/product/product-by-id-information/product-by-id-information.component.html
@@ -41,6 +41,6 @@
    </div>
 </div>
 <div class="container">
-   <app-cart-item></app-cart-item>
+   <app-cart></app-cart>
 </div>
 <!-- [attr.disabled]='product.countInStock === 0 ? true, null' -->
