--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -4,9 +4,7 @@
          Shopping cart
       </h2>
       <div class="cart__row">
-         <app-cart-item></app-cart-item>
-         <!-- <app-products-item *ngFor='let product of products' [product]='product' class="product__item"> -->
-         <!-- </app-products-item> -->
+         <app-cart-item *ngFor='let item of list; let i=index;' class="cart" [item]='item'></app-cart-item>
       </div>
    </div>
 </div>
