--- a/src/app/components/header/header__components/app-search/search__components/app-input/app-input.component.html
+++ b/src/app/components/header/header__components/app-search/search__components/app-input/app-input.component.html
@@ -1,3 +1,3 @@
 <div class="app__input">
-   <input type="text" placeholder="Search Products...">
+   <input type="text" placeholder="Search Products..." [(ngModel)]='forFind'>
 </div>
