--- a/src/app/components/product/product-by-id-information/product-by-id-information.component.html
+++ b/src/app/components/product/product-by-id-information/product-by-id-information.component.html
@@ -1,46 +1,45 @@
 <div class="main">
-   <div class="container">
-      <button class="main__back" routerLink=''>
-         Go back
-      </button>
-      <div class="main__row" *ngIf='product'>
-         <div class="main__descr">
-            <div class="main__image">
-               <img src="https://nodejs-final-mysql.herokuapp.com{{product.image}}" alt="{{product.name}}">
-            </div>
-            <div class="main__info">
-               <h3 class="main__name">{{product.name}}</h3>
-               <p class="main__review">{{product.numReviews}}</p>
-               <p class="main__price">Price: {{product.price}} $</p>
-               <p class="main__description">{{product.description}}</p>
-            </div>
-         </div>
-         <div class="main__card">
-            <div class="main__prices">
-               <span>Price:</span>
-               <span>{{product.price}} $</span>
-            </div>
-            <div class="main__status">
-               <span>Status:</span>
-               <span>in stock</span>
-            </div>
-            <div class="main__qty">
-               <span>Qty:</span>
-               <form>
-                  <select [(ngModel)]='countByProduct' class="main__select">
-                     <option [value]='i+1' *ngFor='let value of counts(product.countInStock); let i = index; '>{{i+1}}
-                     </option>
-                  </select>
-               </form>
-            </div>
-            <div class="main__btn">
-               <button (click)=buyProduct(product)>Add to card</button>
-            </div>
-         </div>
+  <div class="container">
+    <button class="main__back" routerLink=''>
+      Go back
+    </button>
+    <div class="main__row" *ngIf='product'>
+      <div class="main__descr">
+        <div class="main__image">
+          <img src="https://nodejs-final-mysql.herokuapp.com{{product.image}}" alt="{{product.name}}">
+        </div>
+        <div class="main__info">
+          <h3 class="main__name">{{product.name}}</h3>
+          <p class="main__review">{{product.numReviews}}</p>
+          <p class="main__price">Price: {{product.price}} $</p>
+          <p class="main__description">{{product.description}}</p>
+        </div>
       </div>
-   </div>
+      <div class="main__card">
+        <div class="main__prices">
+          <span>Price:</span>
+          <span>{{product.price}} $</span>
+        </div>
+        <div class="main__status">
+          <span>Status:</span>
+          <span>in stock</span>
+        </div>
+        <div class="main__qty">
+          <span>Qty:</span>
+            <select [(ngModel)]='selectedCount' class="main__select">
+              <option *ngFor="let value of counts" [value]="value">
+                {{value}}
+              </option>
+            </select>
+        </div>
+        <div class="main__btn">
+          <button (click)=buyProduct(product)>Add to card</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <div class="container">
-   <app-cart></app-cart>
+  <app-cart></app-cart>
 </div>
 <!-- [attr.disabled]='product.countInStock === 0 ? true, null' -->
