start search section

--- a/src/app/components/header/header__components/app-search/search__components/app-btn/app-btn.component.html
+++ b/src/app/components/header/header__components/app-search/search__components/app-btn/app-btn.component.html
@@ -1,4 +1,3 @@
 <div class="button">
-   <app-app-input class="input"></app-app-input>
-   <button>Search</button>
+   <button (click)='hello()'>Search</button>
 </div>
