--- a/src/app/components/cart/cart-item/cart-item.component.html
+++ b/src/app/components/cart/cart-item/cart-item.component.html
@@ -1,28 +1,3 @@
-<div>
-   <div class="cart__image">
-      <img src="https://nodejs-final-mysql.herokuapp.com{{item.image}}" alt="{{item.name}}">
-   </div>
-   <div class="cart__info">
-      <h3 class="cart__name">{{item.name}}</h3>
-      <p class="cart__price">{{item.price}}$</p>
-      <div class="cart__qty">
-         <form>
-            <select>
-               <option value="1">1</option>
-               <option value="2">2</option>
-               <option value="3">3</option>
-               <option value="4">4</option>
-               <option value="5">5</option>
-               <option value="6">6</option>
-               <option value="7">7</option>
-               <option value="8">8</option>
-               <option value="9">9</option>
-               <option value="10">10</option>
-            </select>
-         </form>
-      </div>
-      <div class="main__delete">
-         <i class="fas fa-trash-alt"></i>
-      </div>
-   </div>
-</div>
+<p *ngFor='let item of products'>
+   {{item.products.name}}
+</p>
