--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,4 +1,39 @@
 <div class="slider">
+
+   <div class="container">
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+         <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+         </ol>
+         <div class="carousel-inner w-100">
+            <div class="carousel-item" [ngClass]='{active: i===0}' *ngFor='let product of items; let i = index'
+               (click)='goToProd(product._id)'>
+               <h2>{{product.name}}</h2>
+               <img class="d-block product" src="https://nodejs-final-mysql.herokuapp.com{{product.image}}"
+                  *ngIf='items' alt="First slide">
+            </div>
+         </div>
+         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+         </a>
+         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+         </a>
+      </div>
+
+   </div>
+
+</div>
+
+
+
+
+<!-- <div class="slider">
    <div class="container">
       <owl-carousel [options]="homeSlider" [carouselClasses]="['owl-theme', 'customClassName']">
          <div class="slider__item" *ngFor='let product of topProducts'>
@@ -8,7 +43,7 @@
          </div>
       </owl-carousel>
    </div>
-</div>
+</div> -->
 
 
 <!-- <div class="slider">
