--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,8 +1,8 @@
 <div class="cart">
    <div class="container">
-      <h2 class="cadi__item-title">
+      <h1 class="cart__item-title">
          Shopping cart
-      </h2>
+      </h1>
       <div class="cart__row">
          <app-cart-item></app-cart-item>
       </div>
