--- a/src/app/components/product/products-item/products-item.component.html
+++ b/src/app/components/product/products-item/products-item.component.html
@@ -3,7 +3,7 @@
       <img src="https://nodejs-final-mysql.herokuapp.com{{product.image}}" alt="Img" class="product__img"
          *ngIf='product'>
       <p>{{product.name}}</p>
-      <div class="product__rating">
+      <div class="main__rating">
          <p>
             <span class="product__star product__star{{product.rating}}"></span>
             <span class="product__review">{{product.numReviews}} reviews</span>
