--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -3,8 +3,8 @@
       <h1 class="cart__item-title">
          Shopping cart
       </h1>
-      <div class="cart__row">
-         <app-cart-item></app-cart-item>
+      <div class="cart__row" *ngFor='let item of products'>
+         <app-cart-item [item]='item'></app-cart-item>
       </div>
    </div>
 </div>
