--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,8 +1,9 @@
 <div class="search">
    <div class="container">
-      <div class="search__row">
+      <div class="search__items">
          <app-products-item *ngFor='let product of dublicate' [product]='product' class="search__item">
          </app-products-item>
       </div>
+
    </div>
 </div>
