--- a/src/app/components/cart/cart-item/cart-item.component.html
+++ b/src/app/components/cart/cart-item/cart-item.component.html
@@ -1,4 +1,4 @@
-<div class="product">
+<div class="product" *ngIf='product.products'>
    <img src="https://nodejs-final-mysql.herokuapp.com{{product.products.image}}" alt="{{product.products.name}}"
       class="product__img">
    <div class="product__descr">
