--- a/src/app/components/product/product-by-id-information/product-by-id-information.component.html
+++ b/src/app/components/product/product-by-id-information/product-by-id-information.component.html
@@ -29,12 +29,13 @@
         </div>
         <div class="main__qty">
           <span>Qty:</span>
-          <app-select [product]='product'></app-select>
+          <app-select [product]='product' (sendSelectedCount)='takeSelectedCount($event)'></app-select>
           <!-- <select [(ngModel)]='selectedCount' class="main__select">
             <option *ngFor="let value of counts" [value]="value">
               {{value}}
             </option>
           </select> -->
+          <!-- (detectNewSkill)='recalcSkillsCount($event)' -->
         </div>
         <div class="main__btn">
           <button (click)=buyProduct(product)>Add to card</button>
