--- a/src/app/components/cart/cart-item/cart-item.component.scss
+++ b/src/app/components/cart/cart-item/cart-item.component.scss
@@ -1,45 +1,48 @@
 .product {
-   padding: 20px 30px 50px 30px;
-   border-bottom: 1px solid black;
-   height: 100px;
+   width: 77%;
+   height: 140px;
+   padding: 10px 15px;
    display: flex;
-   margin-top: 30px;
+   border-bottom: 1px solid black;
    align-items: center;
 
    &__img {
       display: block;
-      width: 10%;
-      margin-right: 50px;
+      width: 18%;
+      margin: 0 25px 0 0;
    }
+
    &__descr {
       display: flex;
-      align-items: baseline;
+      align-items: center;
    }
 
    &__name {
-      margin: 0 20px 0 0;
-      font-size: 21px;
-      line-height: 27;
-      width: 270px;
+      width: 250px;
+      font-size: 24px;
+      line-height: 28px;
+      margin: 0 10px 0 0;
    }
 
    &__price {
       font-weight: 500;
-      font-size: 18px;
+      font-size: 19px;
    }
-   
+
+   &__select {
+      display: block;
+      margin: -10px 20px 0 20px;
+   }
+
    &__remove {
-      margin: 0 0 0 20px;
-
-      i {   
-         font-size: 18px;
-      }
-
-      i:hover {
-         color: red;
-      }
+      display: block;
+      margin: -10px 0 0 0;
+      font-size: 20px;
+   
+   &:hover {
+      color: red;
+      transition: 0.3s;
    }
-
- 
+   }
 
 }
