--- a/src/app/components/header/header__components/app-search/search__components/app-btn/app-btn.component.html
+++ b/src/app/components/header/header__components/app-search/search__components/app-btn/app-btn.component.html
@@ -1,3 +1,3 @@
 <div class="button">
-   <button (click)='findProduct()' routerLink='search'>Search</button>
+   <button (click)='findProduct(searchProduct)'>Search</button>
 </div>
