--- a/src/app/components/cart/cart-item/cart-item.component.html
+++ b/src/app/components/cart/cart-item/cart-item.component.html
@@ -14,3 +14,7 @@
       <i class="fas fa-trash product__remove" (click)='removeProductFormCart(i)'></i>
    </div>
 </div>
+
+
+
+<!-- (click)=ngOnDestroy(i) -->
