--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -1,9 +1,13 @@
 .cart__item-title {
    font-size: 30px;
 }
-
+.cart__row {
+   width: 65%;
+}
 .container {
    max-width: 1200px;
    width: 90%;
    margin: 0 auto;
+   display: flex;
+   flex-direction: row;
 }
