--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -9,8 +9,8 @@
          </div>
       </div>
       <div class="total">
-         <h1>Total Count: </h1>
-         <h1>Total Price: $</h1>
+         <h1>Total Count: {{totalCount}}</h1>
+         <h1>Total Price: {{totalPrice}} $</h1>
       </div>
 
    </div>
