--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -8,9 +8,9 @@
             <app-cart-item [product]='product' [i]='i'></app-cart-item>
          </div>
       </div>
-      <div class="total">
-         <h1>Total Count: {{totalCount}}</h1>
-         <h1>Total Price: {{totalPrice}} $</h1>
+      <div class="cart__total">
+         <h2>Total Count: {{totalCount}}</h2>
+         <h2>Total Price: {{totalPrice}} $</h2>
       </div>
 
    </div>
