--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,16 @@
 <div class="login">
-   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, accusamus eius est aperiam cupiditate magnam quaerat
-   accusantium natus architecto similique.
+   <form>
+
+      <label>
+         Type your name
+         <input type="text" class="login__name">
+      </label>
+      <br>
+      <label>
+         Type your password
+         <input type="password" class="login__password">
+      </label>
+
+      <button (click)='logIn()'>Log in</button>
+   </form>
 </div>
