--- a/src/app/components/header/header__components/app-search/search__components/app-input/app-input.component.html
+++ b/src/app/components/header/header__components/app-search/search__components/app-input/app-input.component.html
@@ -1,4 +1,4 @@
 <div class="app__input">
    <input type="text" placeholder="Search Products..." [(ngModel)]='searchProduct'>
-   <app-app-btn [searchProductBtn]='searchProduct'></app-app-btn>
+   <app-app-btn [searchProductBtn]='searchProduct' (zeroing)='zeroing($event)'></app-app-btn>
 </div>
