--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -42,4 +42,14 @@
    }
 }
 
+.loader-container {
+   position: absolute;
+ 
+   width: 100%;
+   height: 100%;
+   // background-color: black;
+   opacity: 0.8;
+   z-index: 99;
+
+}
 
