--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 /* You can add global styles to this file, and also import other style files */
 /* Обнуление*/
 *{padding:0;margin:0;border:0;}
@@ -20,3 +22,5 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit;}
 * {
    font-family: 'Noto Sans JP', sans-serif;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
