--- a/src/app/components/product/products-item/products-item.component.scss
+++ b/src/app/components/product/products-item/products-item.component.scss
@@ -49,3 +49,15 @@
       content: '★★★★★';
    }
 }
+
+.loader-container {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   opacity: 0.8;
+   z-index: 99;
+
+   &::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+       stroke: rgb(13, 99, 212);
+   }
+}
