--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -34,3 +34,14 @@
     width: 300px;
     border-radius: 50%;
 }
+.loader-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    z-index: 99;
+
+    &::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+        stroke: rgb(13, 99, 212);
+    }
+ }
