--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -5,6 +5,7 @@
       margin: 0 auto;
       display: flex;
       flex-direction: row;
+      position: relative;
    }
 
    &__item-title {
@@ -19,6 +20,9 @@
       width: 35%;
       padding: 30px;
       max-height: 250px;
+      position: absolute;
+      top: 0;
+      right: 0;
    }
 
    &__descr {
