--- a/src/app/components/header/header__components/nav-menu/nav-menu.component.html
+++ b/src/app/components/header/header__components/nav-menu/nav-menu.component.html
@@ -10,7 +10,7 @@
       <li class="nav__item">
          <a routerLink="login" class="nav__link" routerLinkActive>
             <i class="fas fa-user"></i>
-            sign in
+            {{ loginValue }}
          </a>
       </li>
    </ul>
