--- a/src/app/components/cart/cart-item/cart-item.component.html
+++ b/src/app/components/cart/cart-item/cart-item.component.html
@@ -13,7 +13,7 @@
          <app-select [product]='product' class="product__select" (sendSelectedCount)='selectToCartItem($event)'>
          </app-select>
          <!-- ! -->
-         <i class="fas fa-trash product__remove" (click)='removeProductFormCart(i)'></i>
+         <i class="fas fa-trash product__remove" (click)='removeProductFromCart(i)'></i>
       </div>
    </div>
 </div>
