--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -12,7 +12,8 @@
    &__row {
       display: flex;
       justify-content: space-between;
-      align-items: center;      
+      align-items: center;
+     flex-wrap: wrap;
    }
 
    &__search {
